# AI-on-Board

./: LICENSE  README.md
Rockchip/cpp/rknn_yolov5/include/: ThreadPool.h  checker.h  decoder.hpp  rknet_cv.hpp
Rockchip/cpp/rknn_yolov5/pysrc/: dataset.txt  run.sh
Rockchip/cpp/yolov5/: .clang-format  CMakeLists.txt  README.md
Rockchip/cpp/yolov5/csrc/multi_thread/: detect-mt.cpp
Rockchip/cpp/yolov5/csrc/single_thread/: detect.cpp
Rockchip/cpp/yolov5/include/: decoder.hpp  det_data.h  rk_utils.hpp
Rockchip/cpp/yolov5/pysrc/: onnx2rknn.py  run.sh
Rockchip/python/yolov8/: README.md  export.py  onnx2rknn.py  rknn_infer.py  rknn_infer_mt.py  rknn_toolkit2-1.5.0+1fa95b5c-cp38-cp38-linux_x86_64.whl  rknn_toolkit_lite2-1.5.0-cp38-cp38-linux_aarch64.whl  triplemu-0.0.1-cp38-cp38-linux_aarch64.whl  yolov8s.onnx
